<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="5dp"
    android:layout_height="wrap_content">
    <androidx.cardview.widget.CardView
        app:cardCornerRadius="15dp"
        app:cardElevation="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">
        <LinearLayout
            android:background="@color/cardBackground"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tvName"
                android:layout_margin="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/contactName"
                android:textColor="@color/white"
                android:textSize="@dimen/titleFontSize"
                android:textStyle="bold|italic"
                app:layout_constraintEnd_toEndOf="parent" />
            <TextView
                android:id="@+id/tvNumber"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/contactNo"
                android:textSize="@dimen/subTitleFontSize"
                app:layout_constraintEnd_toEndOf="parent" />
            <TextView
                android:id="@+id/tvEmail"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/contactEmail"
                android:textSize="@dimen/subtitleFontSize"
                app:layout_constraintEnd_toEndOf="parent" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>